--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
  <!--                       3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 · -->
                         <a href="mailto:niteenkole@gmail.com">niteenkole@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p class="lead mb-5">I am experienced in AWS and IBM cloud technologies.Have deep understanding/implementation AWS and IBM enterprise architecture in production environment.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
