--- a/index.html
+++ b/index.html
@@ -128,37 +128,37 @@
                     <div class="subheading mb-2">AWS Cloud Architect</div>
                     <div class="subheading mb-2">IBM Cloud Architect</div>
                     <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="mdi-docker"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>                        
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-angular"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-react"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-sass"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-less"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-npm"></i></li>
+                <!--        <li class="list-inline-item"><i class="mdi-docker"></i></li>  -->
+                <!--        <li class="list-inline-item"><i class="fab fa-html5"></i></li>  -->                      
+                <!--        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li> -->
+                <!--        <li class="list-inline-item"><i class="fab fa-js-square"></i></li> -->
+                <!--        <li class="list-inline-item"><i class="fab fa-angular"></i></li> -->
+                <!--        <li class="list-inline-item"><i class="fab fa-react"></i></li> -->
+                <!--        <li class="list-inline-item"><i class="fab fa-node-js"></i></li> -->
+                <!--        <li class="list-inline-item"><i class="fab fa-sass"></i></li> -->
+                <!--        <li class="list-inline-item"><i class="fab fa-less"></i></li> -->
+                <!--        <li class="list-inline-item"><i class="fab fa-wordpress"></i></li> -->
+                <!--        <li class="list-inline-item"><i class="fab fa-gulp"></i></li> -->
+                <!--        <li class="list-inline-item"><i class="fab fa-grunt"></i></li> -->
+                <!--        <li class="list-inline-item"><i class="fab fa-npm"></i></li> -->
                     </ul>
                     <div class="subheading mb-3">Workflow</div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Mobile-First, Responsive Design
+                            IBM CLOUD IKS (kubernetes cluster) production Design
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Browser Testing & Debugging
+                            Azure AKS (kubernetes cluster) production Design
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Functional Teams
+                            AWS production Design,Centralized setup with transit gateway,Palo Alto,vpc to on-prem
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Agile Development & Scrum
+                            Migration from on-prem to Cloud
                         </li>
                     </ul>
                 </div>
