--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             <ul class="fa-ul mb-0">
                 <li>
                     <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                    AWS Certified Cloud Pratitioner
+                     <a href="https://github.com/niteenkole/pgadmin4">pgadmin4 on AKS (azure kubernetes cluster) behind AGIC (application gateway ingress control) with azure file storage as PV</a>
                 </li>
                 <li>
                     <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
