added pub 2 and 3

--- a/index.html
+++ b/index.html
@@ -234,13 +234,13 @@
                 </li>
                 <li>
                     <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                    AWS Certified Solution Architect Associate
+                    <a href="https://dzone.com/articles/how-to-automate-container-security-by-using-crds-t">How to Automate Container Security by Using CRDs to Get Security Policy as Code</a>
                 </li>
                 <li>
                     <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                     
          <!--               <sup>st</sup> -->
-                    AWS Certified Solution Developer Associate
+         <a href="https://security.toolbox.com/guest-article/guide-to-automating-container-security-scans-in-the-ci-cd-pipeline-for-devops-teams">Guide to Automating Container Security Scans in the CI/CD Pipeline for DevOps Teams</a>
                 </li>
                 <li>
                     <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
