--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
                     </div>
                     <p class="lead mb-5">I am experienced in AWS and IBM cloud technologies.Have deep understanding/implementation AWS and IBM enterprise architecture in production environment.</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/niteen-kole-7548555/"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://niteenkole.github.io/"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://twitter.com/niteenkole"><i class="fab fa-twitter"></i></a>
+                        <a class="social-icon" href="https://www.facebook.com/niteen.kole"><i class="fab fa-facebook-f"></i></a>
                     </div>
                 </div>
             </section>
